# VK_Client

./: CMakeLists.txt
examples/: main.cpp  main1.cpp
include/: client.hpp
include/Telegram/: client.hpp
include/VK/: client.hpp  json.hpp
sources/: CMakeCache.txt  Makefile  client.cpp  client.cpp.save  client.cpp.save.1  cmake_install.cmake
tests/: tests.cpp
vk-json/: .methods.json.swp
